fix: adjust table overflow property and update border color for improved styling

--- a/DeviceInvy/static/css/device.css
+++ b/DeviceInvy/static/css/device.css
@@ -35,7 +35,7 @@ table {
   margin-top: 20px;
   background-color: white;
   border-radius: 10px;
-  /* overflow: hidden; */
+  overflow: hidden;
   border: 2px solid black;
 }
 
@@ -43,8 +43,9 @@ th,
 td {
   padding: 12px;
   color: black;
-  border: 1px solid #ccc;
+  border: 1px solid black;
   text-align: left;
+  border-radius: 10px;
 }
 
 th {
